# clusterer

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
include/: burda_hit.h  burda_to_mm_hit_adapter.h  calibration.h  cluster.h  clusterer.h  comm.h  data_printer.h  data_reader.h  dataflow_controller.h  hit_sorter.h  i_data_node.h  i_data_producer.h  io_utils.h  mapped_mm_stream.h  mm_hit.h  mm_hit_tot.h  mm_stream.h  new_clusterer.h  pipe.h  pipe_reader.h  pipe_writer.h  priority_queue.h  utils.h
include/benchmark/: benchmarker.h  i_time_measurable.h  measuring_clock.h  model_factory.h
include/data_analysis/: cluster_attribute_plotter.h  cluster_attribute_plotter.py  cluster_bench_plotter.py
include/data_analysis_scripts/: cluster_attribute_plotter.h  cluster_attribute_plotter.py  cluster_bench_plotter.py  clustering_detailed_bench_plotter.py
include/data_flow/: abstract_pipe.h  data_buffer.h  dataflow_controller.h  dataflow_package.h  i_controlable_source.h  i_data_consumer.h  i_data_node.h  i_data_producer.h  i_multi_producer.h  i_simple_consumer.h  i_simple_producer.h  i_synchronizer_node.h  multi_cluster_pipe_reader.h  multi_pipe_writer.h  pipe.h  pipe_descriptor.h  pipe_reader.h  pipe_writer.h
include/data_nodes/: burda_to_mm_hit_adapter.h  clusterer.h  clusterer_sync.h  data_printer.h  data_reader.h  deprecated_clusterer.h  filtering_clusterer.h  hit_sorter.h  nodes_package.h  parallel_clusterer.h  repeating_data_reader.h
include/data_nodes/analysis/: cluster_property_computer.h  default_window_feature_vector.h  feature_quantizer.h  pixel_halo_width_calculator.h
include/data_nodes/clustering/: cluster_merger.h  cluster_merger_new.h  cluster_merger_new_vect.h  cluster_sorting_combiner.h  cluster_splitter.h  clusterer.h  deprecated_clusterer.h  filtering_clusterer.h  halo_bb_clusterer.h  i_public_state_clusterer.h  parallel_clusterer.h  strict_halo_bb_clusterer.h  temporal_clusterer.h  trigger_clusterer.h
include/data_nodes/clustering_validation/: clustering_validator.h
include/data_nodes/io/: data_printer.h  data_reader.h  online_data_reader.h  online_sync_data_reader.h  repeating_data_reader.h
include/data_nodes/preprocessing/: burda_to_mm_hit_adapter.h  hit_sorter.h
include/data_nodes/window_processing/: default_window_feature_vector.h  trigger_node.h  triggers.h  window_feature_computer.h  window_state.h
include/data_structs/: burda_hit.h  calibration.h  cluster.h  mm_hit.h  mm_hit_tot.h  node_args.h  produced_cluster.h  quad_tree_cluster.h
include/devices/: current_device.h  current_system.h  timepix3.h
include/execution/: arg_parser.h  executor.h  model_factory.h  model_runner.h  model_selector.h
include/experiments/performance/: performance_test.h
include/experiments/validation/: validation.h
src/: main.cpp
